# circuit-cell

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  dev-run.sh  push-release.sh  readme.md  set-versions.sh
.github/workflows/: release.yml
cmake/: version.h.in
qml/: MainUI.qml  OverlayUI.qml  resources.qrc
src/: MainWindow.cpp  MainWindow.hpp  main.cpp
support_tools/: auto-downloader.py  svg2png.cpp
